--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -6820,14 +6820,14 @@
  	 	 	"eng": "Email is required"
  	 	},
  	 	"sendEmail": {
- 	 	 	"trans": "Отправить электронное письмо",
+ 	 	 	"trans": "Отправить",
  	 	 	"eng": "Send Email"
  	 	},
  	 	"emailSent": {
  	 	 	"vars": [
  	 	 	 	"email"
  	 	 	],
- 	 	 	"trans": "Электронная почта сброса пароля было отправлено {электронной почте}",
+ 	 	 	"trans": "Сообщение для сброса пароля отправлено на {email}",
  	 	 	"eng": "An password reset email has been sent to {email}"
  	 	},
  	 	"checkEmail": {
@@ -6837,12 +6837,12 @@
  	},
  	"sendCosmeticPage": {
  	 	"donationTabTitle": {
- 	 	 	"trans": "Кадр чата",
+ 	 	 	"trans": "Наборы",
  	 	 	"eng": "Chat Frame"
  	 	},
  	 	"emblemTab": {
  	 	 	"title": {
- 	 	 	 	"trans": "Эмблема",
+ 	 	 	 	"trans": "Эмблемы",
  	 	 	 	"eng": "Emblem"
  	 	 	}
  	 	},
@@ -6850,11 +6850,11 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Отправка косметического в ${playerName}",
+ 	 	 	"trans": "Отправка косметического подарка игроку \"${playerName}\"...",
  	 	 	"eng": "Sending cosmetic to ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Не посылайте косметику игрокам, которых вы не знаете или используете его как часть торговли. Эта функция должна использоваться только в качестве подарка вашему другу",
+ 	 	 	"trans": "Не отправляйте косметический подпрок незнакомым игрокам и не используйте его в торговле. Эту функцию можно использовать только в качестве подарка другу.",
  	 	 	"eng": "Do not send cosmetic to players you do not know or use it as part of a trade. this feature should only be used as a gift to your friend"
  	 	},
  	 	"confirmModal": {
@@ -6864,15 +6864,15 @@
  	 	 	 	 	"playerName",
  	 	 	 	 	"price"
  	 	 	 	],
- 	 	 	 	"trans": "Отправить ${donationName} пожертвование рамки чата (стоимость ${price} единица) на игрок \"${playerName}\"?",
+ 	 	 	 	"trans": "Отправить ${donationName} набор стоимостью ${price} Unit игроку \"${playerName}\"?",
  	 	 	 	"eng": "Send ${donationName} donation chat frame (cost ${price} Unit) to player \"${playerName}\"?"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Нажав подтвердить, вы соглашаетесь с тем, что не отправляете этот косметический подарок как часть сделки и является чисто подарок вашему другу без ожидания возврата.",
+ 	 	 	 	"trans": "Нажав кнопку \"Подтвердить\", вы соглашаетесь с тем, что отправленный вами косметический подарок, не является частью сделки и несёт в себе исключительно дружеский посыл, а также вы не будете требовать его возврата",
  	 	 	 	"eng": "By clicking confirm, you agree that you are not sending this cosmetic gift as part of a trade and is purely a gift to your friend with no return expected."
  	 	 	},
  	 	 	"confirmText": {
- 	 	 	 	"trans": "Подтверждать",
+ 	 	 	 	"trans": "Подтвердить",
  	 	 	 	"eng": "Confirm"
  	 	 	}
  	 	},
@@ -6881,22 +6881,22 @@
  	 	 	 	"donationName",
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Вы успешно отправили ${donationName} пожертвовать кадр чата игроку \"${playerName}\"",
+ 	 	 	"trans": "Вы успешно отправили ${donationName} набор игроку \"${playerName}\"!",
  	 	 	"eng": "You have successfully sent ${donationName} donation chat frame to player \"${playerName}\""
  	 	},
  	 	"hasDonation": {
- 	 	 	"trans": "принадлежащий",
+ 	 	 	"trans": "Уже используется",
  	 	 	"eng": "owned"
  	 	},
  	 	"donationPrice": {
  	 	 	"vars": [
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "${price} единица",
+ 	 	 	"trans": "${price} Unit",
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"donationDescription": {
- 	 	 	"trans": "Одаренное уровень пожертвований длится 30 дней",
+ 	 	 	"trans": "Срок существования подарка 30 дней",
  	 	 	"eng": "Gifted donation tier last for 30 days"
  	 	},
  	 	"emblemNotIncluded": {
@@ -6909,11 +6909,11 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Отправка косметического в ${playerName}",
+ 	 	 	"trans": "Отправка косметического подарка игроку \"${playerName}\"...",
  	 	 	"eng": "Sending cosmetic to ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Не посылайте косметику игрокам, которых вы не знаете или используете его как часть торговли. Эта функция должна использоваться только в качестве подарка вашему другу",
+ 	 	 	"trans": "Не отправляйте косметические подарки другим игрокам, которых вы не знаете. Эта функция должна использоваться только в качестве подарка вашему другу",
  	 	 	"eng": "Do not send cosmetic to players you do not know or use it as part of a trade. this feature should only be used as a gift to your friend"
  	 	},
  	 	"confirmModal": {
@@ -6922,15 +6922,15 @@
  	 	 	 	 	"playerName",
  	 	 	 	 	"price"
  	 	 	 	],
- 	 	 	 	"trans": "Отправить Emblem (стоимость ${price} единица) на игрок \"${playerName}\"?",
+ 	 	 	 	"trans": "Отправить эмблему стоимостью ${price} Unit игроку \"${playerName}\"?",
  	 	 	 	"eng": "Send emblem (cost ${price} Unit) to player \"${playerName}\"?"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Нажав подтвердить, вы соглашаетесь с тем, что не отправляете этот косметический подарок как часть сделки и является чисто подарок вашему другу без ожидания возврата.",
+ 	 	 	 	"trans": "Нажав кнопку \"Подтвердить\", вы соглашаетесь с тем, что отправленный вами косметический подарок, не является частью сделки и несёт в себе исключительно дружеский посыл, а также вы не будете требовать его возврата",
  	 	 	 	"eng": "By clicking confirm, you agree that you are not sending this cosmetic gift as part of a trade and is purely a gift to your friend with no return expected."
  	 	 	},
  	 	 	"confirmText": {
- 	 	 	 	"trans": "Подтверждать",
+ 	 	 	 	"trans": "Подтвердить",
  	 	 	 	"eng": "Confirm"
  	 	 	}
  	 	},
@@ -6938,7 +6938,7 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Вы успешно отправили эмблему игроку \"${playerName}\"",
+ 	 	 	"trans": "Вы успешно отправили эмблему игроку \"${playerName}\"!",
  	 	 	"eng": "You have successfully sent an emblem to player \"${playerName}\""
  	 	}
  	}
