--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -2338,7 +2338,7 @@
  	 	 	"eng": "Health"
  	 	},
  	 	"escape": {
- 	 	 	"trans": "도망",
+ 	 	 	"trans": "탈출하기",
  	 	 	"eng": "escape"
  	 	},
  	 	"confirm": {
@@ -2502,7 +2502,7 @@
  	"battleUI": {
  	 	"quickSlotModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "빠른 슬롯에 바인딩 할 항목을 선택하십시오",
+ 	 	 	 	"trans": "퀵슬롯에 등록할 아이템을 선택하십시오.",
  	 	 	 	"eng": "Select an item to bind to quick slot"
  	 	 	}
  	 	}
@@ -5977,11 +5977,11 @@
  	 	},
  	 	"shareDungeonModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "채팅 할 던전을 공유 하시겠습니까?",
+ 	 	 	 	"trans": "채팅에 던전을 공유하시겠습니까?",
  	 	 	 	"eng": "Share Dungeon to chat?"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "현재 던전을 채팅 할 수 있습니다.",
+ 	 	 	 	"trans": "현재 공략중인 던전을 채팅에 공유할 수 있습니다.",
  	 	 	 	"eng": "You can share your current dungeon to chat."
  	 	 	},
  	 	 	"cancel": {
@@ -5989,7 +5989,7 @@
  	 	 	 	"eng": "Cancel"
  	 	 	},
  	 	 	"confirm": {
- 	 	 	 	"trans": "지금 공유하십시오",
+ 	 	 	 	"trans": "공유하기",
  	 	 	 	"eng": "Share Now"
  	 	 	}
  	 	},
