--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -445,11 +445,11 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "더 많은 캐시를 인쇄하거나 암시장에서 캐시를 자동으로 인쇄하고 판매하여",
+ 	 	 	 	"trans": "일자리 허브에서 인쇄 공장 및 역공학을 수행하거나, 더 많은 캐시를 인쇄하거나,",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "인쇄 레벨을 높이고, 더 강력한 무기를 만드세요",
+ 	 	 	 	"trans": "암시장에서 캐시를 자동으로 인쇄하고 판매하여 인쇄 레벨을 높이고, 더 강력한 무기를 만드세요",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
